# StatRender

./: CMakeLists.txt
images/: test_trace.ppm
include/stat_render/accelerators/: Bound.h
include/stat_render/acclerators/: Bound.h
include/stat_render/core/: Camera.h  Film.h  Hit.h  Matrix.h  Ray.h  Vector.h  common.h  transform.h
include/stat_render/lights/: AreaLights.h  Light.h  PointLight.h
include/stat_render/materials/: Diffuse.h  DiffuseMap.h  Emissive.h  Material.h
include/stat_render/renderers/: Renderer.h
include/stat_render/samplers/: QMC.h  sampler.h  sobolMatrix.h
include/stat_render/scenes/: Scene.h  parser.h
include/stat_render/shapes/: Mesh.h  Object.h  Sphere.h  Triangle.h
src/: main.cpp
src/accelerators/: BVH.cpp
src/core/: Film.cpp  transform.cpp
src/materials/: Diffuse.cpp  Emissive.cpp
src/renderers/: Renderer.cpp
src/samplers/: sampler.cpp
src/scenes/: Scene.cpp  parser.cpp
src/shapes/: Mesh.cpp  Sphere.cpp  Triangle.cpp
